// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs /> render matches snapshot 1`] = `<styled.div />`;

exports[`<Breadcrumbs /> render matches snapshot 2`] = `
<styled.div>
  <styled.div
    key="9ab47eadf44d397992b4cb6b15b1f221e198908b"
  >
    <div />
  </styled.div>
</styled.div>
`;

exports[`<Breadcrumbs /> render matches snapshot 3`] = `
<styled.div>
  <styled.div
    key="a82e8c5ff9d56218f85ee5fafe0d30fa7bcbcf3b"
  >
    <Styled(withThemeProvider(Pt))
      data-active={false}
      to="bar"
    >
      foo
    </Styled(withThemeProvider(Pt))>
  </styled.div>
</styled.div>
`;

exports[`<Breadcrumbs /> render matches snapshot 4`] = `
<styled.div>
  <styled.div
    key="a82e8c5ff9d56218f85ee5fafe0d30fa7bcbcf3b"
  >
    <Styled(withThemeProvider(Pt))
      data-active={false}
      to="bar"
    >
      foo
    </Styled(withThemeProvider(Pt))>
  </styled.div>
  <styled.div
    key="fcea48774eac6847e055e5309259828d20316a02"
  >
    <div />
  </styled.div>
</styled.div>
`;
